--- a/index.html
+++ b/index.html
@@ -979,7 +979,22 @@
                     }, 3000);
                 }
             }
-            
+            <!-- Global AdSense Script -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1395580330385976"
+     crossorigin="anonymous"></script>
+
+<!-- Example Ad Unit -->
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-client="ca-pub-1395580330385976"
+     data-ad-slot="1234567890"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
             // Close modal when clicking outside
             downloadModal.addEventListener('click', function(e) {
                 if (e.target === downloadModal) {
